project(tactile-core CXX)

add_library(tactile-core STATIC)
add_library(tactile::core ALIAS tactile-core)

target_sources(tactile-core
               PRIVATE
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/meta/create_property_command.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/cmd/meta/create_property_command.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/meta/remove_property_command.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/cmd/meta/remove_property_command.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/meta/rename_property_command.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/cmd/meta/rename_property_command.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/meta/update_property_command.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/cmd/meta/update_property_command.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/command.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/cmd/command_stack.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/cmd/command_stack.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/assert.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/assert.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/exception.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/exception.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/generic_error.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/generic_error.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/performance.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/performance.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/stacktrace.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/stacktrace.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/terminate.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/debug/terminate.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/debug/validation.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/document/document.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/document/document_info.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/document/document_manager.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/document/document_manager.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/document/map_document.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/document/map_document.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/engine/engine.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/engine/engine.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/entity/entity.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/entity/entity.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/entity/registry.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/entity/registry.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/component_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/component_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/component_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/dialog_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/edit_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/edit_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/edit_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/event_dispatcher.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/event_dispatcher.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/file_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/file_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/file_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/layer_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/layer_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/layer_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/map_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/map_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/map_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/property_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/property_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/property_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/tileset_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/tileset_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/tileset_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/view_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/view_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/view_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/viewport_event_handler.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/event/viewport_event_handler.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/event/viewport_events.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/compress/compression_error.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/io/compress/compression_error.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/save/ir.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/save/save_format.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/save/vec_serialization.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/io/save/vec_serialization.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/ini.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/io/ini.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/io/texture.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/dense_tile_matrix.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/dense_tile_matrix.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/group_layer.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/group_layer.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/layer.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/layer.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/object.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/object.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/object_layer.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/object_layer.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/sparse_tile_matrix.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/sparse_tile_matrix.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/tile_layer.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/layer/tile_layer.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/layer/tile_matrix.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/log/log_sink.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/log/logger.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/log/logger.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/log/set_log_scope.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/log/set_log_scope.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/log/terminal_log_sink.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/log/terminal_log_sink.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/map/map.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/map/map.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/map/map_spec.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/map/map_spec.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/meta/attribute.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/meta/attribute.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/meta/attribute_type.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/meta/attribute_type.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/meta/color.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/meta/color.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/meta/meta.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/model/model.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/model/model.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/model/settings.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/model/settings.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/numeric/random.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/numeric/random.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/numeric/vec.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/numeric/vec_common.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/numeric/vec_format.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/numeric/vec_stream.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/bits.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/dynamic_library.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/platform/dynamic_library.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/environment.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/platform/environment.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/file_dialog.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/platform/file_dialog.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/filesystem.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/platform/filesystem.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/platform/win32.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/platform/win32.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/tile/animation.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/tile/animation.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/tile/tile.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/tile/tile.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/tile/tileset.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/tile/tileset.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/tile/tileset_spec.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/attribute_widgets.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/attribute_widgets.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/buttons.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/buttons.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/dialogs.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/dialogs.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/icons.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/icons.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/menus.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/menus.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/overlays.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/overlays.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/popups.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/popups.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/style.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/style.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/widgets.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/widgets.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/common/window.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/common/window.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dialog/new_map_dialog.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dialog/new_map_dialog.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dialog/new_property_dialog.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dialog/new_property_dialog.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dialog/new_tileset_dialog.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dialog/new_tileset_dialog.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dialog/rename_property_dialog.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dialog/rename_property_dialog.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/component_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/component_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/dock_space.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/dock_space.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/document_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/document_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/layer_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/layer_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/log_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/log_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/property_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/property_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/dock/tileset_dock.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/dock/tileset_dock.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/i18n/language.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/i18n/language.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/i18n/language_id.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/i18n/language_parser.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/i18n/language_parser.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/i18n/string_id.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/debug_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/debug_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/edit_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/edit_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/file_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/file_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/help_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/help_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/map_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/map_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/menu_bar.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/menu_bar.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/tileset_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/tileset_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/menu/view_menu.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/menu/view_menu.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/render/hexagon_info.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/render/hexagon_info.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/canvas_renderer.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/canvas_renderer.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/fonts.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/fonts.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/imgui_compat.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/shortcuts.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/shortcuts.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/theme.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/viewport.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/viewport.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/ui/widget_manager.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/ui/widget_manager.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/lookup.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/matrix_extent.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/util/matrix_extent.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/matrix_index.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/util/matrix_index.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/scope_guard.hpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/string_conv.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/util/string_conv.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/string_ops.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/util/string_ops.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/util/uuid.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/util/uuid.cpp"
               "${PROJECT_SOURCE_DIR}/inc/tactile/core/tactile_editor.hpp"
               "${PROJECT_SOURCE_DIR}/src/tactile/core/tactile_editor.cpp"
               )

tactile_prepare_target(tactile-core)

target_include_directories(tactile-core
                           PUBLIC
                           "${PROJECT_SOURCE_DIR}/inc"

                           SYSTEM PUBLIC
                           "${TACTILE_VENDOR_DIR}/centurion"
                           "${TACTILE_VENDOR_DIR}/fontawesome"
                           )

target_compile_definitions(tactile-core
                           PUBLIC
                           "IMGUI_DEFINE_MATH_OPERATORS"

                           PRIVATE
                           "BOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED"
                           "BOOST_UUID_RANDOM_PROVIDER_FORCE_WINCRYPT"
                           "CENTURION_NO_SDL_IMAGE"
                           "CENTURION_NO_SDL_MIXER"
                           "CENTURION_NO_SDL_TTF"
                           "WIN32_LEAN_AND_MEAN"
                           "NOMINMAX"
                           )

target_link_libraries(tactile-core
                      PUBLIC
                      tactile::base
                      EnTT::EnTT
                      imgui::imgui

                      PRIVATE
                      SDL2::SDL2
                      Boost::boost
                      FastFloat::fast_float
                      magic_enum::magic_enum
                      SDL2::SDL2
                      protobuf::libprotobuf
                      tinyfiledialogs::tinyfiledialogs
                      )
