project(tactile-core CXX)

find_package(Boost REQUIRED)
find_package(EnTT CONFIG REQUIRED)
find_package(FastFloat CONFIG REQUIRED)
find_package(imgui CONFIG REQUIRED)
find_package(magic_enum CONFIG REQUIRED)
find_package(Protobuf CONFIG REQUIRED)
find_package(SDL2 CONFIG REQUIRED)
find_package(tinyfiledialogs CONFIG REQUIRED)

find_path(CPPCODEC_INCLUDE_DIRS "cppcodec/base32_crockford.hpp")

add_library(tactile-core STATIC)
add_library(tactile::core ALIAS tactile-core)

target_sources(tactile-core
               PRIVATE
               "src/tactile/core/cmd/layer/create_layer_command.cpp"
               "src/tactile/core/cmd/layer/duplicate_layer_command.cpp"
               "src/tactile/core/cmd/layer/move_layer_down_command.cpp"
               "src/tactile/core/cmd/layer/move_layer_up_command.cpp"
               "src/tactile/core/cmd/layer/remove_layer_command.cpp"
               "src/tactile/core/cmd/layer/set_layer_opacity_command.cpp"
               "src/tactile/core/cmd/layer/set_layer_visibility_command.cpp"
               "src/tactile/core/cmd/meta/create_property_command.cpp"
               "src/tactile/core/cmd/meta/remove_property_command.cpp"
               "src/tactile/core/cmd/meta/rename_property_command.cpp"
               "src/tactile/core/cmd/meta/update_property_command.cpp"
               "src/tactile/core/cmd/object/create_object_command.cpp"
               "src/tactile/core/cmd/object/move_object_command.cpp"
               "src/tactile/core/cmd/object/remove_object_command.cpp"
               "src/tactile/core/cmd/object/set_object_tag_command.cpp"
               "src/tactile/core/cmd/object/set_object_visibility_command.cpp"
               "src/tactile/core/cmd/tile/add_tileset_command.cpp"
               "src/tactile/core/cmd/tile/remove_tileset_command.cpp"
               "src/tactile/core/cmd/command_stack.cpp"
               "src/tactile/core/debug/assert.cpp"
               "src/tactile/core/debug/exception.cpp"
               "src/tactile/core/debug/generic_error.cpp"
               "src/tactile/core/debug/performance.cpp"
               "src/tactile/core/debug/stacktrace.cpp"
               "src/tactile/core/debug/terminate.cpp"
               "src/tactile/core/document/document_manager.cpp"
               "src/tactile/core/document/layer_view_impl.cpp"
               "src/tactile/core/document/map_document.cpp"
               "src/tactile/core/document/map_view_impl.cpp"
               "src/tactile/core/document/meta_view_impl.cpp"
               "src/tactile/core/document/object_view_impl.cpp"
               "src/tactile/core/document/tile_view_impl.cpp"
               "src/tactile/core/document/tileset_view_impl.cpp"
               "src/tactile/core/engine/engine.cpp"
               "src/tactile/core/entity/entity.cpp"
               "src/tactile/core/entity/registry.cpp"
               "src/tactile/core/event/component_event_handler.cpp"
               "src/tactile/core/event/edit_event_handler.cpp"
               "src/tactile/core/event/event_dispatcher.cpp"
               "src/tactile/core/event/file_event_handler.cpp"
               "src/tactile/core/event/layer_event_handler.cpp"
               "src/tactile/core/event/map_event_handler.cpp"
               "src/tactile/core/event/property_event_handler.cpp"
               "src/tactile/core/event/tileset_event_handler.cpp"
               "src/tactile/core/event/view_event_handler.cpp"
               "src/tactile/core/event/viewport_event_handler.cpp"
               "src/tactile/core/io/compress/compression_error.cpp"
               "src/tactile/core/io/save/vec_serialization.cpp"
               "src/tactile/core/io/ini.cpp"
               "src/tactile/core/io/texture.cpp"
               "src/tactile/core/layer/group_layer.cpp"
               "src/tactile/core/layer/layer.cpp"
               "src/tactile/core/layer/layer_common.cpp"
               "src/tactile/core/layer/object.cpp"
               "src/tactile/core/layer/object_layer.cpp"
               "src/tactile/core/layer/tile_layer.cpp"
               "src/tactile/core/log/logger.cpp"
               "src/tactile/core/log/set_log_scope.cpp"
               "src/tactile/core/log/terminal_log_sink.cpp"
               "src/tactile/core/map/map.cpp"
               "src/tactile/core/map/map_spec.cpp"
               "src/tactile/core/meta/attribute_type.cpp"
               "src/tactile/core/meta/color.cpp"
               "src/tactile/core/meta/meta.cpp"
               "src/tactile/core/model/model.cpp"
               "src/tactile/core/model/settings.cpp"
               "src/tactile/core/numeric/random.cpp"
               "src/tactile/core/platform/dynamic_library.cpp"
               "src/tactile/core/platform/environment.cpp"
               "src/tactile/core/platform/file_dialog.cpp"
               "src/tactile/core/platform/filesystem.cpp"
               "src/tactile/core/platform/win32.cpp"
               "src/tactile/core/tile/animation.cpp"
               "src/tactile/core/tile/tile.cpp"
               "src/tactile/core/tile/tileset.cpp"
               "src/tactile/core/ui/common/attribute_widgets.cpp"
               "src/tactile/core/ui/common/buttons.cpp"
               "src/tactile/core/ui/common/dialogs.cpp"
               "src/tactile/core/ui/common/icons.cpp"
               "src/tactile/core/ui/common/menus.cpp"
               "src/tactile/core/ui/common/overlays.cpp"
               "src/tactile/core/ui/common/popups.cpp"
               "src/tactile/core/ui/common/style.cpp"
               "src/tactile/core/ui/common/widgets.cpp"
               "src/tactile/core/ui/common/window.cpp"
               "src/tactile/core/ui/dialog/new_map_dialog.cpp"
               "src/tactile/core/ui/dialog/new_property_dialog.cpp"
               "src/tactile/core/ui/dialog/new_tileset_dialog.cpp"
               "src/tactile/core/ui/dialog/rename_property_dialog.cpp"
               "src/tactile/core/ui/dock/component_dock.cpp"
               "src/tactile/core/ui/dock/dock_space.cpp"
               "src/tactile/core/ui/dock/document_dock.cpp"
               "src/tactile/core/ui/dock/layer_dock.cpp"
               "src/tactile/core/ui/dock/log_dock.cpp"
               "src/tactile/core/ui/dock/property_dock.cpp"
               "src/tactile/core/ui/dock/tileset_dock.cpp"
               "src/tactile/core/ui/i18n/language.cpp"
               "src/tactile/core/ui/i18n/language_parser.cpp"
               "src/tactile/core/ui/menu/debug_menu.cpp"
               "src/tactile/core/ui/menu/edit_menu.cpp"
               "src/tactile/core/ui/menu/file_menu.cpp"
               "src/tactile/core/ui/menu/help_menu.cpp"
               "src/tactile/core/ui/menu/map_menu.cpp"
               "src/tactile/core/ui/menu/menu_bar.cpp"
               "src/tactile/core/ui/menu/tileset_menu.cpp"
               "src/tactile/core/ui/menu/view_menu.cpp"
               "src/tactile/core/ui/render/hexagon_info.cpp"
               "src/tactile/core/ui/render/orthogonal_renderer.cpp"
               "src/tactile/core/ui/canvas_overlay.cpp"
               "src/tactile/core/ui/canvas_renderer.cpp"
               "src/tactile/core/ui/fonts.cpp"
               "src/tactile/core/ui/shortcuts.cpp"
               "src/tactile/core/ui/viewport.cpp"
               "src/tactile/core/ui/widget_manager.cpp"
               "src/tactile/core/util/string_conv.cpp"
               "src/tactile/core/util/string_ops.cpp"
               "src/tactile/core/util/uuid.cpp"
               "src/tactile/core/tactile_app.cpp"

               PUBLIC FILE_SET "HEADERS" BASE_DIRS "inc" FILES
               "inc/tactile/core/cmd/layer/create_layer_command.hpp"
               "inc/tactile/core/cmd/layer/duplicate_layer_command.hpp"
               "inc/tactile/core/cmd/layer/move_layer_down_command.hpp"
               "inc/tactile/core/cmd/layer/move_layer_up_command.hpp"
               "inc/tactile/core/cmd/layer/remove_layer_command.hpp"
               "inc/tactile/core/cmd/layer/set_layer_opacity_command.hpp"
               "inc/tactile/core/cmd/layer/set_layer_visibility_command.hpp"
               "inc/tactile/core/cmd/meta/create_property_command.hpp"
               "inc/tactile/core/cmd/meta/remove_property_command.hpp"
               "inc/tactile/core/cmd/meta/rename_property_command.hpp"
               "inc/tactile/core/cmd/meta/update_property_command.hpp"
               "inc/tactile/core/cmd/object/create_object_command.hpp"
               "inc/tactile/core/cmd/object/move_object_command.hpp"
               "inc/tactile/core/cmd/object/remove_object_command.hpp"
               "inc/tactile/core/cmd/object/set_object_tag_command.hpp"
               "inc/tactile/core/cmd/object/set_object_visibility_command.hpp"
               "inc/tactile/core/cmd/tile/add_tileset_command.hpp"
               "inc/tactile/core/cmd/tile/remove_tileset_command.hpp"
               "inc/tactile/core/cmd/command.hpp"
               "inc/tactile/core/cmd/command_stack.hpp"
               "inc/tactile/core/debug/assert.hpp"
               "inc/tactile/core/debug/exception.hpp"
               "inc/tactile/core/debug/generic_error.hpp"
               "inc/tactile/core/debug/performance.hpp"
               "inc/tactile/core/debug/stacktrace.hpp"
               "inc/tactile/core/debug/terminate.hpp"
               "inc/tactile/core/debug/validation.hpp"
               "inc/tactile/core/document/document_info.hpp"
               "inc/tactile/core/document/document_manager.hpp"
               "inc/tactile/core/document/layer_view_impl.hpp"
               "inc/tactile/core/document/map_document.hpp"
               "inc/tactile/core/document/map_view_impl.hpp"
               "inc/tactile/core/document/meta_view_impl.hpp"
               "inc/tactile/core/document/object_view_impl.hpp"
               "inc/tactile/core/document/tile_view_impl.hpp"
               "inc/tactile/core/document/tileset_view_impl.hpp"
               "inc/tactile/core/engine/engine.hpp"
               "inc/tactile/core/entity/entity.hpp"
               "inc/tactile/core/entity/registry.hpp"
               "inc/tactile/core/event/component_event_handler.hpp"
               "inc/tactile/core/event/component_events.hpp"
               "inc/tactile/core/event/dialog_events.hpp"
               "inc/tactile/core/event/edit_event_handler.hpp"
               "inc/tactile/core/event/edit_events.hpp"
               "inc/tactile/core/event/event_dispatcher.hpp"
               "inc/tactile/core/event/file_event_handler.hpp"
               "inc/tactile/core/event/file_events.hpp"
               "inc/tactile/core/event/layer_event_handler.hpp"
               "inc/tactile/core/event/layer_events.hpp"
               "inc/tactile/core/event/map_event_handler.hpp"
               "inc/tactile/core/event/map_events.hpp"
               "inc/tactile/core/event/property_event_handler.hpp"
               "inc/tactile/core/event/property_events.hpp"
               "inc/tactile/core/event/tileset_event_handler.hpp"
               "inc/tactile/core/event/tileset_events.hpp"
               "inc/tactile/core/event/view_event_handler.hpp"
               "inc/tactile/core/event/view_events.hpp"
               "inc/tactile/core/event/viewport_event_handler.hpp"
               "inc/tactile/core/event/viewport_events.hpp"
               "inc/tactile/core/io/compress/compression_error.hpp"
               "inc/tactile/core/io/save/vec_serialization.hpp"
               "inc/tactile/core/io/ini.hpp"
               "inc/tactile/core/io/texture.hpp"
               "inc/tactile/core/layer/group_layer.hpp"
               "inc/tactile/core/layer/layer.hpp"
               "inc/tactile/core/layer/layer_common.hpp"
               "inc/tactile/core/layer/object.hpp"
               "inc/tactile/core/layer/object_layer.hpp"
               "inc/tactile/core/layer/tile_layer.hpp"
               "inc/tactile/core/log/log_sink.hpp"
               "inc/tactile/core/log/logger.hpp"
               "inc/tactile/core/log/set_log_scope.hpp"
               "inc/tactile/core/log/terminal_log_sink.hpp"
               "inc/tactile/core/map/map.hpp"
               "inc/tactile/core/map/map_spec.hpp"
               "inc/tactile/core/meta/attribute_type.hpp"
               "inc/tactile/core/meta/color.hpp"
               "inc/tactile/core/meta/meta.hpp"
               "inc/tactile/core/model/model.hpp"
               "inc/tactile/core/model/settings.hpp"
               "inc/tactile/core/numeric/random.hpp"
               "inc/tactile/core/platform/dynamic_library.hpp"
               "inc/tactile/core/platform/environment.hpp"
               "inc/tactile/core/platform/file_dialog.hpp"
               "inc/tactile/core/platform/filesystem.hpp"
               "inc/tactile/core/platform/win32.hpp"
               "inc/tactile/core/tile/animation.hpp"
               "inc/tactile/core/tile/tile.hpp"
               "inc/tactile/core/tile/tileset.hpp"
               "inc/tactile/core/tile/tileset_spec.hpp"
               "inc/tactile/core/ui/common/attribute_widgets.hpp"
               "inc/tactile/core/ui/common/buttons.hpp"
               "inc/tactile/core/ui/common/dialogs.hpp"
               "inc/tactile/core/ui/common/icons.hpp"
               "inc/tactile/core/ui/common/menus.hpp"
               "inc/tactile/core/ui/common/overlays.hpp"
               "inc/tactile/core/ui/common/popups.hpp"
               "inc/tactile/core/ui/common/style.hpp"
               "inc/tactile/core/ui/common/text.hpp"
               "inc/tactile/core/ui/common/widgets.hpp"
               "inc/tactile/core/ui/common/window.hpp"
               "inc/tactile/core/ui/dialog/new_map_dialog.hpp"
               "inc/tactile/core/ui/dialog/new_property_dialog.hpp"
               "inc/tactile/core/ui/dialog/new_tileset_dialog.hpp"
               "inc/tactile/core/ui/dialog/rename_property_dialog.hpp"
               "inc/tactile/core/ui/dock/component_dock.hpp"
               "inc/tactile/core/ui/dock/dock_space.hpp"
               "inc/tactile/core/ui/dock/document_dock.hpp"
               "inc/tactile/core/ui/dock/layer_dock.hpp"
               "inc/tactile/core/ui/dock/log_dock.hpp"
               "inc/tactile/core/ui/dock/property_dock.hpp"
               "inc/tactile/core/ui/dock/tileset_dock.hpp"
               "inc/tactile/core/ui/i18n/language.hpp"
               "inc/tactile/core/ui/i18n/language_id.hpp"
               "inc/tactile/core/ui/i18n/language_parser.hpp"
               "inc/tactile/core/ui/i18n/string_id.hpp"
               "inc/tactile/core/ui/menu/debug_menu.hpp"
               "inc/tactile/core/ui/menu/edit_menu.hpp"
               "inc/tactile/core/ui/menu/file_menu.hpp"
               "inc/tactile/core/ui/menu/help_menu.hpp"
               "inc/tactile/core/ui/menu/map_menu.hpp"
               "inc/tactile/core/ui/menu/menu_bar.hpp"
               "inc/tactile/core/ui/menu/tileset_menu.hpp"
               "inc/tactile/core/ui/menu/view_menu.hpp"
               "inc/tactile/core/ui/render/hexagon_info.hpp"
               "inc/tactile/core/ui/render/orthogonal_renderer.hpp"
               "inc/tactile/core/ui/render/primitives.hpp"
               "inc/tactile/core/ui/canvas_overlay.hpp"
               "inc/tactile/core/ui/canvas_renderer.hpp"
               "inc/tactile/core/ui/fonts.hpp"
               "inc/tactile/core/ui/imgui_compat.hpp"
               "inc/tactile/core/ui/shortcuts.hpp"
               "inc/tactile/core/ui/theme.hpp"
               "inc/tactile/core/ui/viewport.hpp"
               "inc/tactile/core/ui/widget_manager.hpp"
               "inc/tactile/core/util/lookup.hpp"
               "inc/tactile/core/util/scope_guard.hpp"
               "inc/tactile/core/util/string_conv.hpp"
               "inc/tactile/core/util/string_ops.hpp"
               "inc/tactile/core/util/uuid.hpp"
               "inc/tactile/core/tactile_app.hpp"
               )

tactile_prepare_target(tactile-core)

target_include_directories(tactile-core
                           SYSTEM PUBLIC
                           "${TACTILE_VENDOR_DIR}/centurion"
                           "${TACTILE_VENDOR_DIR}/fontawesome"
                           "${CPPCODEC_INCLUDE_DIRS}"
                           )

target_compile_definitions(tactile-core
                           PUBLIC
                           "IMGUI_DEFINE_MATH_OPERATORS"

                           PRIVATE
                           "BOOST_STACKTRACE_GNU_SOURCE_NOT_REQUIRED"
                           "BOOST_UUID_RANDOM_PROVIDER_FORCE_WINCRYPT"
                           "CENTURION_NO_SDL_IMAGE"
                           "CENTURION_NO_SDL_MIXER"
                           "CENTURION_NO_SDL_TTF"
                           "WIN32_LEAN_AND_MEAN"
                           "NOMINMAX"
                           )

target_link_libraries(tactile-core
                      PUBLIC
                      tactile::base
                      EnTT::EnTT
                      imgui::imgui

                      PRIVATE
                      Boost::boost
                      FastFloat::fast_float
                      magic_enum::magic_enum
                      protobuf::libprotobuf
                      SDL2::SDL2
                      tinyfiledialogs::tinyfiledialogs
                      )

if (TACTILE_BUILD_TESTS)
  add_subdirectory("test")
endif ()
